Bug 1613634 - Reduce calls to CoalesceMutationEvents r=Jamie,eeejay

When adding a new accessibility event to NotificationController, we
check to see if the event should be suppressed. This is a time-memory
tradeoff; since we check every event before dispatching them, the
correctness should not be impacted regardless of whether we always
append events. This change takes the time required from O(mn^2) where m
is the average depth of an event's parent tree and n is the number of
events, to O(mn).

Differential Revision: https://phabricator.services.mozilla.com/D135159